# tonneru

./: .gitignore  CHEATSHEET.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  update.sh
.github/workflows/: aur.yml
docs/: AUR_DEPLOYMENT.md
packaging/aur/: .SRCINFO  PKGBUILD  tonneru.install
packaging/hyprland/: windowrules.conf
packaging/polkit/: com.omarchy.tonneru.policy
packaging/sudoers/: tonneru
packaging/systemd/: tonneru.service
packaging/usr/lib/tonneru/: tonneru-sudo
packaging/waybar/: config.jsonc  style.css  tonneru-status.sh  tonneru.sh
src/: app.rs  main.rs  theme.rs
src/config/: mod.rs
src/network/: mod.rs  monitor.rs  power.rs
src/ui/: components.rs  mod.rs
src/vpn/: killswitch.rs  mod.rs  wireguard.rs
